# LEParadigmVLDB26

BOSS/: CMakeLists.txt
BOSS/Source/: BOSS.cpp  BOSS.h  BootstrapEngine.hpp  Expression.hpp  ExpressionUtilities.hpp  PortableBOSSSerialization.h  Serialization.hpp
BOSS/Tests/: BOSSTests.cpp
BOSSConditionalEvaluationEngine/: CMakeLists.txt
BOSSConditionalEvaluationEngine/Source/: BOSSConditionalEvaluationEngine.cpp  BOSSConditionalEvaluationEngine.hpp
BOSSConditionalEvaluationEngine/Tests/: BOSSConditionalEvaluationTests.cpp
BOSSDictionaryEncoderEngine/: CMakeLists.txt
BOSSDictionaryEncoderEngine/Source/: BOSSDictionaryEncoderEngine.cpp  BOSSDictionaryEncoderEngine.hpp
BOSSDictionaryEncoderEngine/Tests/: BOSSDictionaryEncoderTests.cpp
BOSSLazyLoadingCoordinatorEngine/: CMakeLists.txt
BOSSLazyLoadingCoordinatorEngine/Benchmarks/: Benchmarks.cpp  ITTNotifySupport.hpp  MiniseedQueries.hpp  ParquetTPCHQueries.hpp  TPCHQueries.hpp  config.hpp  run_benchmarks.py  utilities.hpp
BOSSLazyLoadingCoordinatorEngine/Source/: BOSSLazyLoadingCoordinatorEngine.cpp  BOSSLazyLoadingCoordinatorEngine.hpp
BOSSLazyLoadingCoordinatorEngine/Tests/: BOSSLazyLoadingCoordinatorTests.cpp
BOSSLazyLoadingCoordinatorEngine/scripts/: create_results_dirs.sh  create_traffic.sh  run_background_benchmarks.sh
BOSSParquetReaderEngine/: CMakeLists.txt
BOSSParquetReaderEngine/Source/: BOSSParquetReaderEngine.cpp  BOSSParquetReaderEngine.hpp
BOSSParquetReaderEngine/Tests/: BOSSParquetReaderEngineTests.cpp
BOSSRemoteBinaryLoaderEngine/: CMakeLists.txt
BOSSRemoteBinaryLoaderEngine/Source/: BOSSRemoteBinaryLoaderEngine.cpp  BOSSRemoteBinaryLoaderEngine.hpp  MultipartRangesResponseParser.hpp  ThreadSafeQueue.hpp  Win32Boilerplate.cpp
BOSSRemoteBinaryLoaderEngine/Tests/: BOSSRemoteBinaryLoaderTests.cpp
BOSSVeloxEngine/: CMakeLists.txt  velox-newest.patch
BOSSVeloxEngine/Benchmarks/: VeloxBenchmarks.cpp
BOSSVeloxEngine/Source/: BOSSVeloxEngine.cpp  BOSSVeloxEngine.hpp  BridgeVelox.cpp  BridgeVelox.h  CompactNullVector.cpp  CompactNullVector.h
BOSSVeloxEngine/Tests/: BOSSTests.cpp
BOSSWisentDeserialiserEngine/: CMakeLists.txt
BOSSWisentDeserialiserEngine/Source/: BOSSWisentDeserialiserEngine.cpp  BOSSWisentDeserialiserEngine.hpp  InstantiationMacros.hpp  RangeOptimiser.hpp
BOSSWisentDeserialiserEngine/Tests/: BOSSWisentDeserialiserTests.cpp
curl_nodup/lib/: dynbuf.h  slist.c  urldata.h
curl_nodup/temp_libs/include/curl/: curl.h
curl_nodup/temp_libs/lib/: libcurl.so.4.8.0
curl_nodup/temp_libs/share/man/man3/: libcurl-symbols.3
curl_nodup/temp_libs_debug/lib/: libcurl.so.4.8.0
curl_nodup/temp_libs_debug/share/man/man1/: curl.1
